tests/ui/attributes/export/crate-type.rs
#![crate_type = "sdylib"]
//~^ ERROR  `sdylib` crate type is unstable
